--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,6 +27,7 @@ jobs:
         cd test
         git clone --recurse-submodules https://git.zx2c4.com/wireguard-android
         cd wireguard-android
+        git checkout 1.0.20220516
         ./gradlew build
         cd ui/build/outputs/apk
         echo "APP=$PWD" >> $GITHUB_ENV
